# minecraft-mesh-gen

python/: .gitignore  README.md  pyproject.toml
python/src/mc2glb/: atlas.py  blocks.py  floodfill.py  geometry.py  gltf_export.py  main.py  mesher.py  nbt_decode.py  world_io.py
